<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="@color/colorOrange">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:src="@drawable/sign_logo"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/prompt_email"
            android:textColor="@color/colorGrey"
            android:textSize="14sp"/>
        <AutoCompleteTextView
            android:id="@+id/rign_up_email"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@drawable/text_shape"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/colorGrey"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/rign_up_passward"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@drawable/text_shape"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_comfirm_password"
            android:textColor="@color/colorGrey"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/rign_up_repassward"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@drawable/text_shape"/>
        <Button
            android:id="@+id/rign_up_button"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_shape"
            android:text="@string/action_sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"/>

    </LinearLayout>


</LinearLayout>